<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical" >

    <ScrollView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal" >
                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/minutes"
                    android:textColor="#FF0000"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/seconds"
                    android:textColor="#FF0000"
                    android:layout_marginStart="30dp"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/className"
                    android:textColor="#FF0000"
                    android:layout_marginStart="30dp"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal" >

                <NumberPicker
                    android:layout_width="94dp"
                    android:layout_height="170dp"
                    android:id="@+id/numberPickerMinutes"
                    android:gravity="right" />

                <NumberPicker
                    android:layout_width="94dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="30dp"
                    android:id="@+id/numberPickerSeconds"
                    android:gravity="right" />

                <NumberPicker
                    android:layout_width="94dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="30dp"
                    android:id="@+id/numberPickerClass"
                    android:gravity="center" />
            </TableRow>
            <View android:id="@+id/separator"
                android:background="#ffffff"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_width = "fill_parent"
                android:layout_height="2dip"
                android:layout_centerVertical ="true"
                android:layout_alignParentTop="true"/>
            <TextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:id="@+id/classSequence"
                android:text=" "
                android:textColor="#FF0000"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />


            <TextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:id="@+id/countdownString"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:textSize="110sp"
                android:gravity="center_horizontal" />
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        >
        <Button
            android:id="@+id/button_setWindward"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="WWD Set"
            android:clickable="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/primary_text_default_material_dark"
            >
        </Button>
        <Button
            android:id="@+id/button_countdownStart"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/button_countdown"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="countdown_start"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_text_default_material_dark"
            >
        </Button>
        <Button
            android:id="@+id/button_setLeeward"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="LWD Set"
            android:clickable="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:textColor="@color/primary_text_default_material_dark"
            >
        </Button>
    </LinearLayout>

</LinearLayout>
